# ChangeLog for app-vim/fugitive
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/fugitive/ChangeLog,v 1.7 2014/06/19 05:32:13 radhermit Exp $

*fugitive-9999 (19 Jun 2014)
*fugitive-2.0_beta (19 Jun 2014)

  19 Jun 2014; Tim Harder <radhermit@gentoo.org> +fugitive-2.0_beta.ebuild,
  +fugitive-9999.ebuild:
  Version bump and add live ebuild.

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> fugitive-1.2.ebuild:
  Stable for x86, wrt bug #481862

  05 Nov 2013; Tony Vroon <chainsaw@gentoo.org> fugitive-1.2.ebuild:
  Marked stable on AMD64 based on arch testing by Elijah "Armageddon" El
  Lazkani in bug #481862.

  21 Oct 2013; Fabian Groffen <grobian@gentoo.org> fugitive-1.2.ebuild:
  Marked ~x64-macos, bug #486818

  27 Nov 2012; Ulrich Müller <ulm@gentoo.org> fugitive-1.2.ebuild:
  Fix LICENSE, distributed under the same terms as Vim itself, bug 444968.

  29 Aug 2012; Fabian Groffen <grobian@gentoo.org> fugitive-1.2.ebuild:
  Marked ~ppc-macos, thanks Konstantin Tokarev, bug #432762

*fugitive-1.2 (29 Apr 2011)

  29 Apr 2011; Tim Harder <radhermit@gentoo.org> +fugitive-1.2.ebuild,
  +metadata.xml:
  Initial import.