@@ -2,20 +2,20 @@
 Hash: SHA256
 
 DIST fugitive-1.2.zip 19983 SHA256 95143775799af41f3fbec757adf62faed6c89a590038f484197aeb0836b9d4e5 SHA512 f208d732ed9a3b67ecd3cda399ea475e52f992c990a88df2049c10b3a2ce7730c6ce090b40af11ff5f3dcd327b75421e966001adcf10bba3379aeee979decf0a WHIRLPOOL c79208185faae7286fba08224bca09f93b9079edeec1c1639c0b292ce2e1b5953442726e13844c75113f2f22d1c1852e07a5630e44c775b0ee10510304e22c6c
-DIST fugitive-2.0_beta.tar.gz 26725 SHA256 3e5029499a157b0ba23d86280bd48e760cb2b5357a88d03115a483808e07a455 SHA512 6cc79f16fd0ff2317c436f923686913a35652897453b30a079e54f2688dc85e6d8a502d65d9e090e5c52cf6cb27ad0e6e4deeb475c7d842c0689cf0229b79aed WHIRLPOOL 3eaa0ae32dfeb26b6f90f63fd7abedd2d9b7a868b8e754c342c4dd4ed313baa3dd029a34fff41424b5b19bffd1cab5da681a3488f0c29ea0aa5362c56aca72a3
+DIST fugitive-2.1.tar.gz 27997 SHA256 530e8865b7f0a3c49c2eac6ec54623af71454fbde04c8844e3c9a5ebcc22f66e SHA512 c6a6cc4e89e02f8c326a48ec57203a257b9fe9102b3a880b5cb7b1d7a97c66933bd83aecfc07ab72dbc10d3e3964b9b501f85c6cb85623a41154bf0072b10023 WHIRLPOOL 93326d2e1f4463a4f68d8c1d33edeaa2490e8129519658519f0c3ae4471fa3d001ec92b9d185865307b61a8898521e6b5c371507ab885b306edced5b80bfe666
 EBUILD fugitive-1.2.ebuild 632 SHA256 75e2e783ed1ecfc2994b5c4f2d6a3850439b27cb0c657351cdfb26fdb0ea62c0 SHA512 f909fdde9ac27d86af2fb3014f0f77d4fa804b24b746aa6f2c68d2f4791e5283294114d27abcb3fe3029bf2482af216df082b6ad434095bda871a9109e2cacf5 WHIRLPOOL 154c572283b0891694248839d1ec5dec05694a69191f728b3f8a85a52dd98aea77e8e0e7708854af29795c8822d1411b28e70ee787acc76c4487a2149812aa3c
-EBUILD fugitive-2.0_beta.ebuild 623 SHA256 2083b0b7aeffeaf43c8d37741fbf6b7db36545591e9f3b1aba45a4c321a0fa01 SHA512 147e395381f68a9396dc07b267d50290ad4228aa209674ebfa7310a85203efe9ea48410d27e791a613e46f1ab89f027ec96f8005fabaf79e05aedcc4c26f82ea WHIRLPOOL 660e3b83bd3c626a83cb1b835430f716edb9edbc74b0a67c2623e341e223d0f5f92d18d1c93262cbfc453b3da98c69b58075980aaca6bc633d960884eccf6e06
-EBUILD fugitive-9999.ebuild 537 SHA256 29a68809b66efe901cf76f49084431c2fe848a3242d015653c9ae68bae5c65db SHA512 bdcb03299b171620c354ef8b3c9dd4042ccaf220c29c0cd7a9bd231022741fcdd5af7613e1e6c385909c7687c68975ff4c35e9b8479709d53ef61310ca53583e WHIRLPOOL 39241bf4e7bce912a68e62605e27e1309f2b018d61f89c710c0655d5ea65914c523fd61ad1f912ab1295522703cb7e61ad7cfe062de59a5af418debbbc53457a
-MISC ChangeLog 1201 SHA256 0128ef51262215f9c063d817add97fba8293c077a8c2b745ddedcb68debb89d5 SHA512 492181c368cb76464ace3c71ddf449ccb39ae14ce37187f16f22de691d2a94d240659dc2db847e2624e8228f6e2488522f47dc2caecade760c3baedbf425fdef WHIRLPOOL c40ec1b6af9d77ad6c787bde28651ca097f3df90952080e92c8d3b64511012c973de6b21a66e88f930cc993548922fed11797e1f96339c4ce52df220d1f9b5c1
+EBUILD fugitive-2.1.ebuild 736 SHA256 176aa270413b53b3f1a596300d21896c65a65dda2e371e159ea8a595ff4a15b2 SHA512 8492e4db915a64ad8af69177a92763649a1bb82cc93f16c3daf40012eba9aaef2d6ea32a7fad5fad86647131db407f79e035af44d1f4e2685424f8a4a29c5426 WHIRLPOOL 8ab538d7650cd8171b1383133fc3db5123b9cc4a013a66ae20037991a5adc204f2c84aedc23300ad152af3b5e3c0086f6c187704fe73d8b4a954305023a64166
+EBUILD fugitive-9999.ebuild 737 SHA256 2a8fe99521f008bc5e8e6f28cfcbab49e947271b699e8292142200b58623efa8 SHA512 bd080fc716297ac0e743bf723ee546f7a6b6a4f520027459c6f05e02aa3ab420fc84468adf5b3315f75990eed8e301352e5b564afa1e5664087b2348891c3525 WHIRLPOOL afaf34be69f1973fe6fdc4a5bd1c6cb0f4dab657843d6bc98b06e1e724a22198ea3bc4f8c0cbcba57c03786cd882e2890c1e330f7ba0f46a7fe10fc7aa54d64c
+MISC ChangeLog 1433 SHA256 776eb24c29a757d61d8554430c040e453a059a79ad99e5e529cca87e2c910189 SHA512 e1bff3d3f5af413593e81b27625fcb1e4aa7db5bca77919293a935a6105d697c1809ed7cd75893823de7f1b823a483cce79199a0d984e9402572a5bd9ae27341 WHIRLPOOL 4bf9a28ed9cf5bf480e0ef6a8429263828f0048b7d4bff2d5d82650cb2a9e9cbd957b5ea4bb7feed84c7df54a3f0c26293a31391e7e77867cf34dbcd28e92eac
 MISC metadata.xml 157 SHA256 106c8618581360c66c2b535fcb7a6cb9ff318f1bd8e6c8f40f2f2f2d54e6787a SHA512 3b60e5c539f0940f297c22ce014cbecfbe31a7321c59384d9f1e8ee929b9685793b7231f49b2a153ddd1b89e3e5a56e5a304e11f321b28147ae47309a3272d70 WHIRLPOOL 22e97df7eb8669d9899254e880755052a8ef06dab300794173011b031a34c438bfc9de390e2a3bd2630927245c1055e789dd113078c2c6bafa7d4f723638a9d7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTonXiAAoJEEqz6FtPBkyj6UIH/i2CJsnPAOtngT7QxfivWqRZ
-WgHy3Hwcc7SYpweF3jFegBSahLCVzdoS8Au0ekS3mdOB9pSKDtpR8gGDxEl8UmLb
-AgJ6g+x90a1LgdD+tOiA2beCXoYawA5qzqeP4xVPgcaImxYniPoSgA9tI7MvRwFE
-NIYHgO4d7b6746+BvQBeBt6V8jaFd4xllU8IlzMAPRicf9S06Hd2BbXNwb9xcPRD
-eP7w7bhtdM6gSlfAyslz+aOqXvmTpIHwuW8Qrx+aXfDFpV52FrdMKANW9JXGNT5X
-blyYcpw5NgDS5rRiUKRgBKwlJufCLImvAIEvoSmUPf44S5VRvfMvopaGulNKO18=
-=lXyV
+iQEcBAEBCAAGBQJTqhkpAAoJEEqz6FtPBkyjCiwH/i1JKYFady5s43pEIW0ez9sy
+reKxAIDJkvR6Y1YDqMaOF53DLws0CvyJs368uELccFOi934LYWfKaZSH6PcnHck6
+PCezHjkqS+rBmrfe1MD+CRU7gYMT7oJy7iDp3hXUbzVSrNOYl8j1hfXRS2v7WUWj
+9ipbyYgQ+LQd48TB4gj2fesBis/3OMDMm5ctVrMPzt/X55at/9c9YRlAJwgnK5ZV
+B7ZQTw06DE6UdEqG/Qfq8WEL1LB5nAy4VyEPjPGA09E8HEVnq6NPsJYH26eu9B/9
+59a5X9AjNokSwkD3p8EBKrIsxBiHh6DOHyBl9pQMLv+eu7K2daXsKkzp1VapjA8=
+=flnK
 -----END PGP SIGNATURE-----
