@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/fugitive/fugitive-9999.ebuild,v 1.2 2014/06/25 00:34:15 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/fugitive/fugitive-2.1.ebuild,v 1.1 2014/06/25 00:34:15 radhermit Exp $
 
 EAPI=5
 inherit vim-plugin
