@@ -7,6 +7,6 @@ KEYWORDS=~amd64 ~x86 ~ppc-macos ~x64-macos
 LICENSE=vim
 RDEPEND=dev-vcs/git || ( >=app-editors/vim-7.3 >=app-editors/gvim-7.3 )
 SLOT=0
-SRC_URI=https://github.com/tpope/vim-fugitive/archive/v2.0.beta.tar.gz -> fugitive-2.0_beta.tar.gz
+SRC_URI=https://github.com/tpope/vim-fugitive/archive/v2.1.tar.gz -> fugitive-2.1.tar.gz
 _eclasses_=vcs-snapshot	58b766562c9fbfb3268b04e33cdf2f66	vim-doc	1c18baeec98cec3287524cbf2fee2bd2	vim-plugin	286547e90fbbc4c841eee80cd73e646c
-_md5_=ce70d479b39db255c19d8caad845fc8c
+_md5_=fed89f393c918605fd5d38d7f669f5da
