@@ -7,4 +7,4 @@ LICENSE=vim
 RDEPEND=dev-vcs/git || ( >=app-editors/vim-7.3 >=app-editors/gvim-7.3 )
 SLOT=0
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	git-r3	da25af7340478afdca16e1e4568b014a	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	vim-doc	1c18baeec98cec3287524cbf2fee2bd2	vim-plugin	286547e90fbbc4c841eee80cd73e646c
-_md5_=b440a7479022dc18a2b83992eef1987c
+_md5_=a1bdfb16cbaddd415d3a497dd6d1c5d2
